--- a/src/Web/DamaWeb/Pages/Shared/_Layout.cshtml
+++ b/src/Web/DamaWeb/Pages/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
     {
         <meta name="robots" content="noindex" />
     }
-    <title>@ViewData["Title"] - Dama no Jornal</title>
+        <title>@ViewData["Title"] - Dama no Jornal&reg;</title>
 
     <environment names="Production">
         <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -142,7 +142,7 @@
                     <div class="text-center footer-img">
                         <a href="https://www.damanojornal.com" alt="Dama no Jornal" title="Dama no Jornal"><img width="319px" src="~/images/flor-com-logo-1.png" /></a>
                     </div>
-                    <div class="esh-app-footer-text footer-text"> © Copyright 2018 Dama no Jornal | All Rights Reserved </div>
+                    <div class="esh-app-footer-text footer-text"> © Copyright 2010-@DateTime.Now.Year Dama no Jornal | All Rights Reserved </div>
                 </section>
                 <section class="col-12 col-sm-4 footer-links text-center">
                     <div class="footer-link text-center">
@@ -164,7 +164,7 @@
                         <a href="https://www.facebook.com/damanojornal/" class="px-2" target="_blank"><i class="fab fa-facebook-f fa-inverse"></i></a>
                         <a href="https://www.instagram.com/damanojornal/" class="px-2" target="_blank"><i class="fab fa-instagram fa-inverse"></i></a>
                     </div>
-                    <div class="esh-app-footer-text footer-text-mobile"> © Copyright 2018 Dama no Jornal | All Rights Reserved </div>
+                    <div class="esh-app-footer-text footer-text-mobile"> © Copyright 2010-@DateTime.Now.Year Dama no Jornal | All Rights Reserved </div>
                 </section>
             </article>
         </div>
