--- a/src/Web/Backoffice/Pages/Products/Create.cshtml
+++ b/src/Web/Backoffice/Pages/Products/Create.cshtml
@@ -18,6 +18,11 @@
                 <input asp-for="ProductModel.Name" class="form-control" />
                 <span asp-validation-for="ProductModel.Name" class="text-danger"></span>
             </div>
+            <div class="form-group required">
+                <label asp-for="ProductModel.Slug" class="control-label"></label>
+                <input asp-for="ProductModel.Slug" class="form-control" />
+                <span asp-validation-for="ProductModel.Slug" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <label asp-for="ProductModel.Description" class="control-label"></label>
                 <textarea asp-for="ProductModel.Description" class="form-control" rows='5'></textarea>
@@ -155,6 +160,10 @@
                     }
                 });
                 SetProductPrice(this.value);
+            });
+
+            $('#ProductModel_Name').on('blur', function () {
+                $('#ProductModel_Slug').val(slugify(this.value));
             });
         });
         function SetProductPrice(productTypeId) {
