add product slug (wip)

--- a/src/Web/Backoffice/Pages/Products/Details.cshtml
+++ b/src/Web/Backoffice/Pages/Products/Details.cshtml
@@ -18,6 +18,12 @@
             @Html.DisplayFor(model => model.ProductModel.Name)
         </dd>
         <dt>
+            @Html.DisplayNameFor(model => model.ProductModel.Slug)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.ProductModel.Slug)
+        </dd>
+        <dt>
             @Html.DisplayNameFor(model => model.ProductModel.Description)
         </dt>
         <dd>
