--- a/src/Web/Backoffice/Pages/Products/Edit.cshtml
+++ b/src/Web/Backoffice/Pages/Products/Edit.cshtml
@@ -14,10 +14,15 @@
     <input asp-for="ProductModel.Sku" type="hidden" />
     <div class="row">
         <div class="col-md-4">
-            <div class="form-group">
+            <div class="form-group required">
                 <label asp-for="ProductModel.Name" class="control-label"></label>
                 <input asp-for="ProductModel.Name" class="form-control" />
                 <span asp-validation-for="ProductModel.Name" class="text-danger"></span>
+            </div>
+            <div class="form-group required">
+                <label asp-for="ProductModel.Slug" class="control-label"></label>
+                <input asp-for="ProductModel.Slug" class="form-control" />
+                <span asp-validation-for="ProductModel.Slug" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="ProductModel.Description" class="control-label"></label>
@@ -303,6 +308,9 @@
                     }
                 });
                 SetProductPrice(this.value);
+            });
+            $('#ProductModel_Name').on('blur', function () {
+                $('#ProductModel_Slug').val(slugify(this.value));
             });
         });
         function SetProductPrice(productTypeId) {
