add tidio on shop

--- a/src/Web/DamaWeb/Pages/Shared/_Layout.cshtml
+++ b/src/Web/DamaWeb/Pages/Shared/_Layout.cshtml
@@ -74,7 +74,7 @@
         </ul>
     </nav>
     <!-- Desktop -->
-    <nav class="navbar navbar-light navbar-expand-md justify-content-between pb-md-2 d-none d-sm-flex w-75"> 
+    <nav class="navbar navbar-light navbar-expand-md justify-content-between pb-md-2 d-none d-sm-flex w-75">
         <div class="navbar-collapse collapse justify-content-end text-center">
             <a asp-page="/Index" class="navbar-brand">
                 <h1>A Loja</h1>
@@ -128,7 +128,7 @@
     </div>
 
     <partial name="_CookieConsentPartial" />
-    
+
     <div class="container body-content ">
         <hr />
         @RenderBody()
@@ -191,8 +191,9 @@
                 asp-fallback-src="~/lib/fontawesome-free-5.0.4/js/fontawesome-all.js">
         </script>
         <script src="~/js/site.min.js" asp-append-version="true"></script>
+        <script src="//code.tidio.co/ezibky1uftop7d5dtokyrddyim1xvllc.js"></script>
     </environment>
-
     @RenderSection("Scripts", required: false)
+
 </body>
 </html>
