add Category Slug on Backoffice

--- a/src/Web/Backoffice/Pages/Category/Details.cshtml
+++ b/src/Web/Backoffice/Pages/Category/Details.cshtml
@@ -18,6 +18,12 @@
             @Html.DisplayFor(model => model.Category.Name)
         </dd>
         <dt>
+            @Html.DisplayNameFor(model => model.Category.Slug)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Category.Slug)
+        </dd>
+        <dt>
             @Html.DisplayNameFor(model => model.Category.Order)
         </dt>
         <dd>
