--- a/src/Web/Backoffice/Pages/Category/Delete.cshtml
+++ b/src/Web/Backoffice/Pages/Category/Delete.cshtml
@@ -18,6 +18,12 @@
         <dd>
             @Html.DisplayFor(model => model.Category.Name)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Category.Slug)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Category.Slug)
+        </dd>
     </dl>
     
     <form method="post">
