--- a/src/Web/Backoffice/Pages/ProductType/Details.cshtml
+++ b/src/Web/Backoffice/Pages/ProductType/Details.cshtml
@@ -24,6 +24,12 @@
             @Html.DisplayFor(model => model.ProductTypeModel.Description)
         </dd>
         <dt>
+            @Html.DisplayNameFor(model => model.ProductTypeModel.Slug)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.ProductTypeModel.Slug)
+        </dd>
+        <dt>
             @Html.DisplayNameFor(model => model.ProductTypeModel.CategoriesName)
         </dt>
         <dd>
