--- a/src/Web/DamaWeb/Pages/Category/Type/Index.cshtml
+++ b/src/Web/DamaWeb/Pages/Category/Type/Index.cshtml
@@ -6,7 +6,7 @@
         ViewBag.NoIndex = true;
     }
 }
-<p class="title">@Model.CatalogTypeModel.Name</p>
+<h1 class="title">@Model.CatalogTypeModel.Name</h1>
 
 <div id="todos" class="news-heading text-center">
     <h2>Todos os Produtos</h2>
