--- a/src/Web/DamaWeb/Pages/Product/Index.cshtml
+++ b/src/Web/DamaWeb/Pages/Product/Index.cshtml
@@ -9,17 +9,17 @@
                 <div class="slider-nav">
                     @foreach (var item in Model.ProductModel.ProductImagesUri)
                     {
-                        <div><img src="@item" class="img-thumbnail" alt="Imagem do Produto" /></div>
+                        <div><img src="@item" class="img-thumbnail" alt="@Model.ProductModel.ProductTitle" /></div>
                     }
                 </div>
                 <a href="#" class="bottom-arrow"><i class="fas fa-chevron-down"></i></a>
             </div>
             <div class="col-12 col-md-9 text-center">
-                <div class="dama-product-title-mobile pt-1 pb-1">@Model.ProductModel.ProductTitle</div>
+                <h1 class="dama-product-title-mobile pt-1 pb-1">@Model.ProductModel.ProductTitle</h1>
                 <div class="slider-for">
                     @foreach (var item in Model.ProductModel.ProductImagesUri)
                     {
-                        <div><img src="@item" class="img-fluid" alt="Imagem do Produto" /></div>
+                        <div><img src="@item" class="img-fluid" alt="@Model.ProductModel.ProductTitle" /></div>
                     }
                 </div>
             </div>
