--- a/src/Web/DamaWeb/Pages/Product/_productDetail.cshtml
+++ b/src/Web/DamaWeb/Pages/Product/_productDetail.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ProductViewModel
 
 <form asp-page="/Basket/Index" asp-page-handler="addtobasket" method="post">
-    <div class="dama-product-title">@Model.ProductTitle</div>
+    <h1 class="dama-product-title">@Model.ProductTitle</h1>
     <div class="row justify-content-center mt-3 mt-md-3">
         <div class="dama-product-price">
             <span>@Model.ProductPrice</span>
