Organizing app.css

--- a/src/Web/DamaWeb/Pages/Customize/Step2.cshtml
+++ b/src/Web/DamaWeb/Pages/Customize/Step2.cshtml
@@ -30,11 +30,11 @@
         <div class="row mb-3 mx-2 mx-sm-0">
             <div class="offset-sm-2 col-sm-8 col-12 p-3 dama-customize-pink text-white dama">
                 <p><strong>Exemplo</strong></p>
-                <p class="dama-customize-small2">
+                <p class="dama-customize-small">
                     <strong>Descrição:</strong> A minha amiga adora cozinhar, tem cabelo curto e não dispensa a companhia do seu gato cinzento.<br />
                     Adora cor de rosa e castanho.
                 </p>
-                <p class="dama-customize-small2 mb-0">
+                <p class="dama-customize-small mb-0">
                     <strong>Frase ou nome: Adoro-te Maria</strong>
                 </p>
             </div>
