--- a/src/Web/DamaWeb/wwwroot/css/app.css
+++ b/src/Web/DamaWeb/wwwroot/css/app.css
@@ -1,16 +1,4 @@
 @font-face {
-    font-family: Montserrat;
-    font-weight: 400;
-    src: url(".../fonts/Montserrat-Regular.eot?") format("eot"), url("../fonts/Montserrat-Regular.woff") format("woff"), url("../fonts/Montserrat-Regular.ttf") format("truetype"), url("../fonts/Montserrat-Regular.svg#Montserrat") format("svg");
-}
-
-@font-face {
-    font-family: Montserrat;
-    font-weight: 700;
-    src: url("../fonts/Montserrat-Bold.eot?") format("eot"), url("../fonts/Montserrat-Bold.woff") format("woff"), url("../fonts/Montserrat-Bold.ttf") format("truetype"), url("../fonts/Montserrat-Bold.svg#Montserrat") format("svg");
-}
-
-@font-face {
     font-family: Lily Script One;
     font-weight: 700;
     src: url("../fonts/LilyScriptOne-Regular.ttf") format("truetype");
@@ -26,7 +14,6 @@
     src: url("../fonts/Quicksand-Medium.ttf") format("truetype");
 }
 
-
 html,
 body {
     font-family: 'Quicksand Medium', sans-serif;
@@ -35,61 +22,12 @@ body {
     z-index: 10;
 }
 
-*,
-*::after,
-*::before {
-    box-sizing: border-box;
-}
-
-.preloading {
-    color: #00A69C;
-    display: block;
-    font-size: 1.5rem;
-    left: 50%;
-    position: fixed;
-    top: 50%;
-    transform: translate(-50%, -50%);
-}
-
-/*select::-ms-expand {
-    display: none;
-}*/
-@media screen and (min-width: 992px) {
-    .form-input {
-        max-width: 360px;
-        width: 360px;
-    }
-}
-
-.customize-image {
-    position: absolute;
-    top: 45px;
-    right: 9%;
-    z-index: 5;
-}
-
-@media screen and (max-width: 992px) {
-    .customize-image {
-        display: none;
-    }
-
-    .consentText {
-        font-size: 10px;
-    }
-}
+/*** SHARED ****/
 
 .form-input {
     border-radius: 0;
     height: 45px;
     padding: 10px;
-}
-
-.form-input-small {
-    max-width: 100px !important;
-}
-
-.form-input-medium {
-    width: 150px !important;
 }
 
 .form-group.required label:after {
@@ -99,33 +37,6 @@ body {
 
 .form-control {
     border-radius: 0 !important;
-}
-
-.search-text {
-    background-color: #FC629D;
-}
-
-    .search-text input {
-        color: #fff;
-        border-bottom: 1px solid #fff !important;
-        font-size: 14px;
-    }
-
-        .search-text input::-ms-input-placeholder {
-            color: #fff;
-        }
-
-        .search-text input::placeholder {
-            color: #fff;
-        }
-
-#searchModal {
-    text-align: center;
-}
-
-#search:focus {
-    border-color: #fff;
-    box-shadow: inset 0 1px 1px #fff, 0 0 8px #fff;
 }
 
 .alert {
@@ -146,17 +57,16 @@ a:visited {
     transition: color 0.35s;
 }
 
-    a:hover {
-        color: #EF7C8D;
-        text-decoration: underline;
-    }
+a:hover {
+    color: #EF7C8D;
+    text-decoration: underline;
+}
 
-.logo {
-    color: #000000;
-    font-family: "Lily Script One", Sans-serif;
-    font-size: 41px;
+h1.title {
+    font-family: "Quicksand Medium", sans-serif;
+    font-size: 20px;
+    color: #FC629D;
     font-weight: 100;
-    font-style: normal;
 }
 
 h2 {
@@ -166,28 +76,13 @@ h2 {
     font-weight: 100;
     line-height: 1.4em
 }
-h1.title {
-    font-family: "Quicksand Medium", sans-serif;
-    font-size: 20px;
-    color: #FC629D;
-    font-weight: 100;
-}
-
-p.title {
-    font-family: "Quicksand Medium", sans-serif;
-    font-size: 20px;
-    color: #FC629D;
-    font-weight: 100;
-}
-
-
-.dama-heading-normal-font {
-    font-family: "Quicksand Medium", sans-serif;
-    color: #FC629D;
-}
 
 h4 {
     font-size: 20px;
+}
+.dama-heading-normal-font {
+    font-family: "Quicksand Medium", sans-serif;
+    color: #FC629D;
 }
 
 hr {
@@ -216,6 +111,273 @@ hr {
     border: 0;
 }
 
+.btn-dama-menta {
+    background-color: #88C9AC;
+    border: 0;
+    color: #fff;
+    border-radius: 0 !important;
+    line-height: 1rem;
+    font-size: 0.8rem;
+}
+
+.btn-dama-menta:hover {
+    background-color: #58AD87 !important;
+    border: 0;
+    color: #fff;
+    transition: all 0.35s;
+}
+
+.btn-dama-pink {
+    background-color: #FC629D;
+    border: 0;
+    color: #fff;
+    border-radius: 0 !important;
+    line-height: 1rem;
+    font-size: 0.8rem;
+}
+
+.btn-dama-pink:hover {
+    background-color: #FC2A7B !important;
+    border: 0;
+    color: #fff;
+    transition: all 0.35s;
+}
+
+.link-dama-menta {
+    color: #88C9AC;
+    text-decoration: underline;
+}
+
+.dama-small-text {
+    font-size: 0.7rem;
+}
+
+.nav-pills .nav-link.active {
+    background-color: #5fcbcb;
+}
+
+.btn-link {
+    color: #5fcbcb;
+}
+
+.btn-link:hover {
+    color: #609f9f;
+}
+
+@media screen and (max-width: 992px) {
+    .separator {
+        width: 250px;
+    }
+}
+@media screen and (min-width: 992px) {
+    .separator {
+        width: 395px;
+        height: 26px;
+    }
+}
+/*** End SHARED*/
+
+/*** HEADER ***/
+
+.logo {
+    color: #000000;
+    font-family: "Lily Script One", Sans-serif;
+    font-size: 41px;
+    font-weight: 100;
+    font-style: normal;
+}
+
+.customize-image {
+    position: absolute;
+    top: 45px;
+    right: 9%;
+    z-index: 5;
+}
+
+/* search box */
+.search-text {
+    background-color: #FC629D;
+}
+.search-text input {
+    color: #fff;
+    border-bottom: 1px solid #fff !important;
+    font-size: 14px;
+}
+.search-text input::-ms-input-placeholder {
+    color: #fff;
+}
+.search-text input::placeholder {
+    color: #fff;
+}
+#searchModal {
+    text-align: center;
+}
+#search:focus {
+    border-color: #fff;
+    box-shadow: inset 0 1px 1px #fff, 0 0 8px #fff;
+}
+
+/*navigation*/
+.login-nav .nav-link {
+    color: #7A7A7A !important;
+}
+
+.login-nav .nav-link:hover {
+    border-bottom: 2px solid#7A7A7A !important;
+}
+
+.navbar-light .navbar-nav .nav-link:hover {
+    /*border-bottom: 3px solid #fff;*/
+    color: #7A7A7A;
+}
+
+.navbar-light .navbar-nav .nav-link {
+    color: #FC629D;
+    font-weight: 500;
+    font-size: 14px;
+    text-decoration: none;
+    transition: border 1s linear;
+}
+
+.dropdown-menu {
+    background-color: #fff;
+    color: #00A69C;
+    border: none;
+    margin: 0;
+    padding: 0;
+}
+
+.dropdown-item {
+    color: #FC629D !important;
+    font-weight: 400;
+    font-size: 14px;
+    text-decoration: none;
+    padding: 15px;
+    margin: auto;
+}
+
+.social-links {
+    text-align: center;
+}
+.social-links a {
+    /*display: inline-block;*/
+    width: 40px;
+    height: 40px;
+    border: 2px solid #fff;
+    border-radius: 50px;
+    margin-right: 4px;
+    cursor: pointer;
+    color: #FC629D;
+}
+.social-links a i {
+    color: #FC629D;
+}
+.social-links .nav-link {
+    padding-top: 8px;
+    padding-right: 2px !important;
+    padding-left: 6px !important;
+}
+
+@media screen and (max-width: 992px) {
+    .customize-image {
+        display: none;
+    }
+}
+@media screen and (min-width: 992px) {
+    #brand-mobile-image {
+        display: none;
+    }
+    .dropdown-item:hover {
+        background-color: #FC629D;
+        transition: background-color 0.35s;
+    }
+
+    .dropdown-item:hover > .dropdown-item-text {
+        background-color: transparent;
+        color: #fff;
+    }
+
+    .dropdown:hover > .dropdown-menu {
+        display: block;
+    }
+
+    .dropdown-toggle:hover > .dropdown-menu {
+        display: block;
+    }
+}
+
+/*** End HEADER ***/
+/*** FOOTER ***/
+.footer-links {
+    width: 300px;
+    padding-top: 30px;
+}
+
+.footer-link {
+    width: 100%;
+    padding: 5px 5px;
+}
+
+.footer-link a,
+.footer-link a:active,
+.footer-link a:hover,
+.footer-link a:visited {
+    color: #fff;
+    text-decoration: none;
+}
+
+.footer-link:hover {
+    border: 1px solid #fff;
+    transition: color 0.35s;
+}
+
+.footer-link i {
+    margin: 5px;
+}
+
+@media screen and (max-width: 992px) {
+    .consentText {
+        font-size: 10px;
+    }
+
+    .footer-img img {
+        width: 200px;
+    }
+
+    .footer-text {
+        display: none;
+    }
+}
+@media screen and (min-width: 992px) {
+    .footer-text-mobile {
+        display: none
+    }
+}
+/*** END FOOTER ***/
+
+/*** HOME PAGE ****/
+
+/* Carousel */
+.carousel-caption p {
+    font-size: 20px;
+    line-height: 1.4;
+}
+
+/* Make .svg files in the carousel display properly in older browsers */
+.carousel-inner .item img[src$=".svg"] {
+    width: 100%;
+}
+
+.news-heading {
+    padding: 50px 50px;
+}
+
+.bannerLink {
+    cursor: pointer;
+}
+/***END HOMEPAGE ***/
+
+/*** PRODUCT PAGE ***/
 
 .btn-outline-pink, .btn-outline-pink:active, .btn-outline-pink:visited {
     border-color: #FC629D;
@@ -246,50 +408,6 @@ hr {
     line-height: 1rem;
     font-size: 0.8rem;
 }
-
- .btn-dama-menta {
-    background-color: #88C9AC;
-    border: 0;
-    color: #fff;
-    border-radius: 0 !important;
-    line-height: 1rem;
-    font-size: 0.8rem;
-}
-
-    .btn-dama-menta:hover {
-        background-color: #58AD87 !important;
-        border: 0;
-        color: #fff;
-        transition: all 0.35s;
-    }
-
-.btn-dama-pink {
-    background-color: #FC629D;
-    border: 0;
-    color: #fff;
-    border-radius: 0 !important;
-    line-height: 1rem;
-    font-size: 0.8rem;
-}
-
-    .btn-dama-pink:hover {
-        background-color: #FC2A7B !important;
-        border: 0;
-        color: #fff;
-        transition: all 0.35s;
-    }
-
-
-.btn-dama-blue {
-    background-color: #88C9AC;
-    border-color: #fff;
-    border-radius: 0 !important;
-}
-
-.link-dama-menta {
-    color: #88C9AC;
-    text-decoration: underline;
-}
 .link-dama-black {
     color: #000000;
     text-decoration: underline;
@@ -303,255 +421,8 @@ hr {
     border-color: #88C9AC !important;
 }
 
-.width-200 {
-    width: 200px;
-}
-
-.brand-image {
-    text-decoration: none;
-}
-
-.backToHome span {
-    opacity: .9;
-    padding-left: 10px;
-    color: #fff;
-    font-size: 13px;
-    font-weight: 400;
-}
-
-.backToHome,
-.backToHome:active,
-.backToHome:visited {
-    color: #fff;
-    text-decoration: none;
-    transition: all .2s ease-in-out;
-}
-
-    .backToHome:hover {
-        color: #fff;
-        text-decoration: none;
-        transform: scale(1.1);
-    }
-
-@media screen and (max-width: 992px) {
-    .brand-image {
-        display: none;
-    }
-
-    .width-200 {
-        display: none;
-    }
-
-    .separator {
-        width: 250px;
-    }
-
-    .footer-img img {
-        width: 200px;
-    }
-
-    .footer-text {
-        display: none;
-    }
-
-    .backToHome {
-        display: none;
-    }
-}
-
-@media screen and (min-width: 992px) {
-    #brand-mobile-image {
-        display: none;
-    }
-
-    .separator {
-        width: 395px;
-        height: 26px;
-    }
-
-    .footer-text-mobile {
-        display: none
-    }
-}
-
-.abs-center-x {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-}
-
-.login-nav .nav-link {
-    color: #7A7A7A !important;
-}
-
-    .login-nav .nav-link:hover {
-        border-bottom: 2px solid#7A7A7A !important;
-    }
-
-.navbar-light .navbar-nav .nav-link:hover {
-    /*border-bottom: 3px solid #fff;*/
-    color: #7A7A7A;
-}
-
-.navbar-light .navbar-nav .nav-link {
-    color: #FC629D;
-    font-weight: 500;
-    font-size: 14px;
-    text-decoration: none;
-    transition: border 1s linear;
-}
-
-
-.navbar-dark .list-inline .nav-item .nav-link {
-    color: #fff;
-}
-
-.dropdown-menu {
-    background-color: #fff;
-    color: #00A69C;
-    border: none;
-    margin: 0;
-    padding: 0;
-}
-
-.dropdown-item {
-    color: #FC629D !important;
-    font-weight: 400;
-    font-size: 14px;
-    text-decoration: none;
-    padding: 15px;
-    margin: auto;
-}
-
-@media screen and (min-width: 992px) {
-
-    .dropdown-item:hover {
-        background-color: #FC629D;
-        transition: background-color 0.35s;
-    }
-
-    .dropdown-item:hover > .dropdown-item-text {
-        background-color: transparent;
-        color: #fff;
-    }
-
-    .dropdown:hover > .dropdown-menu {
-        display: block;
-    }
-
-    .dropdown-toggle:hover > .dropdown-menu {
-        display: block;
-    }
-}
-
-.social-links {
-    text-align: center;
-}
-
-    .social-links a {
-        /*display: inline-block;*/
-        width: 40px;
-        height: 40px;
-        border: 2px solid #fff;
-        border-radius: 50px;
-        margin-right: 4px;
-        cursor: pointer;
-        color: #FC629D;
-    }
-
-        .social-links a i {
-            color: #FC629D;
-        }
-
-    .social-links .nav-link {
-        padding-top: 8px;
-        padding-right: 2px !important;
-        padding-left: 6px !important;
-    }
-
-/* Footer */
-.footer-links {
-    width: 300px;
-    padding-top: 30px;
-}
-
-.footer-link {
-    width: 100%;
-    padding: 5px 5px;
-}
-
-    .footer-link a,
-    .footer-link a:active,
-    .footer-link a:hover,
-    .footer-link a:visited {
-        color: #fff;
-        text-decoration: none;
-    }
-
-    .footer-link:hover {
-        border: 1px solid #fff;
-        transition: color 0.35s;
-    }
-
-    .footer-link i {
-        margin: 5px;
-    }
-
-/* Carousel */
-.carousel-caption p {
-    font-size: 20px;
-    line-height: 1.4;
-}
-
-/* Make .svg files in the carousel display properly in older browsers */
-.carousel-inner .item img[src$=".svg"] {
-    width: 100%;
-}
-
-/* Main Page */
-
-.news-heading {
-    padding: 50px 50px;
-}
-
-.bannerLink {
-    cursor: pointer;
-}
-
-/* Product Page */
-@media screen and (min-width: 992px) {
-    .dama-product-title-mobile {
-        display: none;
-    }
-}
-
-@media screen and (max-width: 992px) {
-    .dama-product-title {
-        display: none;
-    }
-
-    .dama-product-thumbnails {
-        display: none;
-    }
-
-    .slider-for img {
-        height: auto;
-        width: auto;
-    }
-    /*.dama-product-description {       
-        width: 390px;
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
-    }*/
-}
-
 .dama-product-input {
     font-size: 0.80rem;
-}
-
-.dama-small-text {
-    font-size: 0.7rem;
 }
 
 .slick-prev {
@@ -617,14 +488,53 @@ hr {
     width: 100%;
 }
 
-    .dama-product-add:hover {
-        background-color: #FC2A7B;
-        transition: all 0.35s;
+.dama-product-add:hover {
+    background-color: #FC2A7B;
+    transition: all 0.35s;
+}
+
+@media screen and (min-width: 992px) {
+    .dama-product-title-mobile {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 992px) {
+    .dama-product-title {
+        display: none;
     }
 
-.dama-login-mobile {
-    margin-left: 38px;
+    .dama-product-thumbnails {
+        display: none;
+    }
+
+    .slider-for img {
+        height: auto;
+        width: auto;
+    }
 }
+
+/*** END PRODUCT PAGE ***/
+/*** SEARCH PAGE ***/
+
+p.title {
+    font-family: "Quicksand Medium", sans-serif;
+    font-size: 20px;
+    color: #FC629D;
+    font-weight: 100;
+}
+/*** END SEARCH PAGE ****/
+/*** ORDERS PAGE ***/
+
+.btn-dama-blue {
+    background-color: #88C9AC;
+    border-color: #fff;
+    border-radius: 0 !important;
+}
+
+/*** END ORDERS PAGE ***/
+
+/*** CUSTOMIZE PAGE ***/
 
 .dama-customize h2 {
     color: #000000;
@@ -636,10 +546,6 @@ hr {
 }
 
 .dama-customize-small {
-    font-size: 12px;
-}
-
-.dama-customize-small2 {
     font-size: 12px;
 }
 
@@ -707,18 +613,18 @@ hr {
     padding: 8px;
 }
 
-    .dama-customize-textarea:focus {
-        outline: none;
-    }
+.dama-customize-textarea:focus {
+    outline: none;
+}
 
 .dama-customize .esh-catalog-button {
     background-color: #e9435b;
 }
 
-    .dama-customize .esh-catalog-button:hover {
-        background-color: #a83a4a;
-        transition: all 0.35s;
-    }
+.dama-customize .esh-catalog-button:hover {
+    background-color: #a83a4a;
+    transition: all 0.35s;
+}
 
 .dama-customize-question {
     font-size: 14px;
@@ -737,22 +643,9 @@ hr {
     border-radius: 0 !important;
 }
 
-.image-invert {
-    -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
-    filter: grayscale(100%)brightness(200%);
-}
+/*** END CUSTOMIZE PAGE ***/
 
-.nav-pills .nav-link.active {
-    background-color: #5fcbcb;
-}
-
-.btn-link {
-    color: #5fcbcb;
-}
-
-    .btn-link:hover {
-        color: #609f9f;
-    }
+/*** SIGIN IN PAGE ***/
 
 .btn-facebook {
     color: #fff;
@@ -774,12 +667,12 @@ hr {
     overflow: hidden;
 }
 
-.btn-social:hover {
-    color: #eee;
-}
+    .btn-social:hover {
+        color: #eee;
+    }
 
 .btn-google:hover {
-    color:#000000;
+    color: #000000;
 }
 
 .btn-social :first-child {
@@ -787,9 +680,11 @@ hr {
     left: 0;
     top: 0;
     bottom: 0;
-    width: 40px;
+    width: 37px;
     padding: 7px;
     font-size: 1.9em;
     text-align: center;
     border-right: 1px solid rgba(0,0,0,0.2);
 }
+
+/*** END SIGN IN PAGE*/
