--- a/src/Web/DamaWeb/Pages/Account/Signin.cshtml
+++ b/src/Web/DamaWeb/Pages/Account/Signin.cshtml
@@ -8,49 +8,36 @@
 }
 <div class="account-login-container">
     <div class="row">
-        <div class="col-sm-6">
+        <div class="col-sm-5">
             <h2 class="dama-heading-normal-font">Login</h2>
             <section>
                 <h4>Para fazer Login usa a tua conta de Facebook ou Google.</h4>
-                @{
-                    if ((Model.ExternalLogins?.Count ?? 0) == 0)
-                    {
-                        @*<div>
-                            <p>
-                                There are no external authentication services configured. See <a href="https://go.microsoft.com/fwlink/?LinkID=532715">this article</a>
-                                for details on setting up this ASP.NET application to support logging in via external services.
-                            </p>
-                        </div>*@
-                    }
-                    else
-                    {
-                        <form asp-page="./ExternalLogin" asp-route-returnUrl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal">
-                            <div class="mt-3">
-                                <p>
-                                    @foreach (var provider in Model.ExternalLogins)
-                                    {
-                                        if (provider.Name.ToLower() == "facebook")
-                                        {
-                                            <button type="submit" class="btn btn-social btn-facebook" name="provider" value="@provider.Name" title="Log in usando a sua conta @provider.DisplayName">
-                                                <i class="fab fa-facebook-f"></i> Login pelo Facebook
-                                            </button>
-                                        }
-                                        else if (provider.Name.ToLower() == "google")
-                                        {
-                                            <button type="submit" class="btn btn-social btn-google mt-3 mt-sm-0" name="provider" value="@provider.Name" title="Log in usando a sua conta @provider.DisplayName">
-                                                <img src="~/images/google_icon.png" width="40" /> Login pelo Google
-                                            </button>
-                                        }
-                                        else
-                                        {
-                                            <button type="submit" class="btn btn-dama-menta" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
-                                        }
-                                    }
-                                </p>
-                            </div>
-                        </form>
-                    }
-                }
+                <form asp-page="./ExternalLogin" asp-route-returnUrl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal">
+                    <div class="mt-3 text-center">
+                        <p>
+                            @foreach (var provider in Model.ExternalLogins)
+                            {
+                                if (provider.Name.ToLower() == "facebook")
+                                {
+                                    <button type="submit" class="btn btn-sm btn-social btn-facebook" name="provider" value="@provider.Name" title="Log in usando a sua conta @provider.DisplayName">
+                                        <i class="fab fa-facebook-f"></i> Login pelo Facebook
+                                    </button>
+                                }
+                                else if (provider.Name.ToLower() == "google")
+                                {
+                                    <button type="submit" class="btn btn-sm btn-social btn-google mt-3 mt-sm-0" name="provider" value="@provider.Name" title="Log in usando a sua conta @provider.DisplayName">
+                                        <img src="~/images/google_icon.png" width="40" /> Login pelo Google
+                                    </button>
+                                }
+                                else
+                                {
+                                    <button type="submit" class="btn btn-dama-menta" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
+                                }
+                            }
+                        </p>
+                    </div>
+                </form>
+
             </section>
             <section>
                 <form asp-route-returnurl="@ViewData["ReturnUrl"]" asp-page-handler="SignIn" method="post" class="form-horizontal">
@@ -85,7 +72,7 @@
                 </form>
             </section>
         </div>
-        <div class="col-sm-4">
+        <div class="offset-sm-1 col-sm-5">
             <h2 class="dama-heading-normal-font">Registo</h2>
             <section>
                 <h4>Para fazeres o teu registo, preenche os campos abaixo.</h4>
